# tracklister

./: .gitignore  README.md  main.py  pyproject.toml
ui/: app.py  messages.py
ui/css/: app.tcss  generator.py
ui/css/themes/: default.tcss
ui/screens/: create.py  home.py  modify.py  settings.py
ui/widgets/: Header.py  Tabs.py
